2006-04-12  Robert Kidd  <rkidd@crhc.uiuc.edu>
        * Merging changes to mainline through revision 112576



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/ia64-improvements@112902 138bc75d-0d04-0410-961f-82ee72b054a4