@@ -37,20 +37,8 @@ exception statement from your version. */
 
 package javax.swing.plaf.basic;
 
-import java.awt.BorderLayout;
-import java.awt.Color;
-import java.awt.Component;
-import java.awt.Dimension;
-import java.awt.Graphics;
-import java.awt.GridBagConstraints;
-import java.awt.GridBagLayout;
-import java.awt.Point;
-import java.awt.Polygon;
 import java.awt.Window;
 import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
-import java.awt.event.ItemEvent;
-import java.awt.event.ItemListener;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
@@ -60,26 +48,18 @@ import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Hashtable;
+
 import javax.swing.AbstractAction;
 import javax.swing.Action;
-import javax.swing.BoxLayout;
-import javax.swing.ButtonGroup;
 import javax.swing.Icon;
 import javax.swing.JButton;
-import javax.swing.JComboBox;
 import javax.swing.JComponent;
 import javax.swing.JDialog;
 import javax.swing.JFileChooser;
-import javax.swing.JLabel;
 import javax.swing.JList;
 import javax.swing.JPanel;
-import javax.swing.JScrollPane;
 import javax.swing.JTextField;
-import javax.swing.JToggleButton;
-import javax.swing.ListCellRenderer;
-import javax.swing.SwingConstants;
 import javax.swing.SwingUtilities;
-import javax.swing.Timer;
 import javax.swing.UIDefaults;
 import javax.swing.UIManager;
 import javax.swing.event.ListSelectionEvent;
@@ -89,28 +69,35 @@ import javax.swing.filechooser.FileSystemView;
 import javax.swing.filechooser.FileView;
 import javax.swing.plaf.ComponentUI;
 import javax.swing.plaf.FileChooserUI;
+import javax.swing.plaf.metal.MetalIconFactory;
 
 
 /**
- * DOCUMENT ME!
+ * A UI delegate for the {@link JFileChooser} component under the 
+ * {@link BasicLookAndFeel}.
  */
 public class BasicFileChooserUI extends FileChooserUI
 {
   /**
-   * DOCUMENT ME!
+   * A file filter that accepts all files.
    */
   protected class AcceptAllFileFilter extends FileFilter
   {
+    /**
+     * Creates a new instance.
+     */
     public AcceptAllFileFilter()
     {
+      // Nothing to do here.
     }
     
     /**
-     * DOCUMENT ME!
+     * Returns <code>true</code> always, as all files are accepted by this
+     * filter.
      *
-     * @param f DOCUMENT ME!
+     * @param f  the file.
      *
-     * @return DOCUMENT ME!
+     * @return Always <code>true</code>.
      */
     public boolean accept(File f)
     {
@@ -118,9 +105,9 @@ public class BasicFileChooserUI extends FileChooserUI
     }
 
     /**
-     * DOCUMENT ME!
+     * Returns a description for this filter.
      *
-     * @return DOCUMENT ME!
+     * @return A description for the file filter.
      */
     public String getDescription()
     {
@@ -129,7 +116,9 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Handles a user action to approve the dialog selection.
+   * 
+   * @see BasicFileChooserUI#getApproveSelectionAction()
    */
   protected class ApproveSelectionAction extends AbstractAction
   {
@@ -138,50 +127,60 @@ public class BasicFileChooserUI extends FileChooserUI
      */
     protected ApproveSelectionAction()
     {
+      super("approveSelection");
     }
 
     /**
-     * DOCUMENT ME!
-     *
-     * @param e DOCUMENT ME!
+     * Sets the current selection and closes the dialog.
+     * 
+     * @param e  the action event.
      */
     public void actionPerformed(ActionEvent e)
     {
-      Object obj = filelist.getSelectedValue();
+      Object obj = null;
+      if (parentPath != null)
+        obj = new String(parentPath + getFileName());
+      else
+        obj = filechooser.getSelectedFile();
       if (obj != null)
         {
-	  File f = filechooser.getFileSystemView().createFileObject(obj
-	                                                            .toString());
-	  if (filechooser.isTraversable(f) && 
-              filechooser.getFileSelectionMode() == JFileChooser.FILES_ONLY)
-            filechooser.setCurrentDirectory(f);
-	  else
-	    {
-	      filechooser.setSelectedFile(f);
-	      filechooser.approveSelection();
-	      closeDialog();
-	    }
+          File f = filechooser.getFileSystemView().createFileObject(obj.toString());
+          File currSelected = filechooser.getSelectedFile();
+          if (filechooser.isTraversable(f))
+            {
+              filechooser.setCurrentDirectory(currSelected);
+              filechooser.rescanCurrentDirectory();
+            }
+          else
+            {
+              filechooser.approveSelection();
+              closeDialog();
+            }
         }
     }
   }
 
   /**
-   * DOCUMENT ME!
+   * Provides presentation information about files and directories.
    */
   protected class BasicFileView extends FileView
   {
-    /** DOCUMENT ME! */
+    /** Storage for cached icons. */
     protected Hashtable iconCache = new Hashtable();
 
+    /**
+     * Creates a new instance.
+     */
     public BasicFileView()
     {
+      // Nothing to do here.
     }
 
     /**
-     * DOCUMENT ME!
+     * Adds an icon to the cache, associating it with the given file/directory.
      *
-     * @param f DOCUMENT ME!
-     * @param i DOCUMENT ME!
+     * @param f  the file/directory.
+     * @param i  the icon.
      */
     public void cacheIcon(File f, Icon i)
     {
@@ -189,7 +188,7 @@ public class BasicFileChooserUI extends FileChooserUI
     }
 
     /**
-     * DOCUMENT ME!
+     * Clears the icon cache.
      */
     public void clearIconCache()
     {
@@ -197,11 +196,12 @@ public class BasicFileChooserUI extends FileChooserUI
     }
 
     /**
-     * DOCUMENT ME!
+     * Retrieves the icon associated with the specified file/directory, if 
+     * there is one.
      *
-     * @param f DOCUMENT ME!
+     * @param f  the file/directory.
      *
-     * @return DOCUMENT ME!
+     * @return The cached icon (or <code>null</code>).
      */
     public Icon getCachedIcon(File f)
     {
@@ -209,11 +209,13 @@ public class BasicFileChooserUI extends FileChooserUI
     }
 
     /**
-     * DOCUMENT ME!
+     * Returns a description of the given file/directory.  In this 
+     * implementation, the description is the same as the name returned by 
+     * {@link #getName(File)}.
      *
-     * @param f DOCUMENT ME!
+     * @param f  the file/directory.
      *
-     * @return DOCUMENT ME!
+     * @return A description of the given file/directory.
      */
     public String getDescription(File f)
     {
@@ -221,11 +223,11 @@ public class BasicFileChooserUI extends FileChooserUI
     }
 
     /**
-     * DOCUMENT ME!
+     * Returns an icon appropriate for the given file or directory.
      *
-     * @param f DOCUMENT ME!
+     * @param f  the file/directory.
      *
-     * @return DOCUMENT ME!
+     * @return An icon.
      */
     public Icon getIcon(File f)
     {
@@ -241,11 +243,11 @@ public class BasicFileChooserUI extends FileChooserUI
     }
 
     /**
-     * DOCUMENT ME!
+     * Returns the name for the given file/directory.
      *
-     * @param f DOCUMENT ME!
+     * @param f  the file/directory.
      *
-     * @return DOCUMENT ME!
+     * @return The name of the file/directory.
      */
     public String getName(File f)
     {
@@ -253,11 +255,11 @@ public class BasicFileChooserUI extends FileChooserUI
     }
 
     /**
-     * DOCUMENT ME!
+     * Returns a localised description for the type of file/directory.
      *
-     * @param f DOCUMENT ME!
+     * @param f  the file/directory.
      *
-     * @return DOCUMENT ME!
+     * @return A type description for the given file/directory.
      */
     public String getTypeDescription(File f)
     {
@@ -268,58 +270,68 @@ public class BasicFileChooserUI extends FileChooserUI
     }
 
     /**
-     * DOCUMENT ME!
+     * Returns {@link Boolean#TRUE} if the given file/directory is hidden,
+     * and {@link Boolean#FALSE} otherwise.
      *
-     * @param f DOCUMENT ME!
+     * @param f  the file/directory.
      *
-     * @return DOCUMENT ME!
+     * @return {@link Boolean#TRUE} or {@link Boolean#FALSE}.
      */
     public Boolean isHidden(File f)
     {
-      return new Boolean(filechooser.getFileSystemView().isHiddenFile(f));
+      return Boolean.valueOf(filechooser.getFileSystemView().isHiddenFile(f));
     }
   }
 
   /**
-   * DOCUMENT ME!
+   * Handles an action to cancel the file chooser.
+   * 
+   * @see BasicFileChooserUI#getCancelSelectionAction()
    */
   protected class CancelSelectionAction extends AbstractAction
   {
     /**
-     * Creates a new CancelSelectionAction object.
+     * Creates a new <code>CancelSelectionAction</code> object.
      */
     protected CancelSelectionAction()
     {
+      super(null);
     }
 
     /**
-     * DOCUMENT ME!
+     * Cancels the selection and closes the dialog.
      *
-     * @param e DOCUMENT ME!
+     * @param e  the action event (ignored).
      */
     public void actionPerformed(ActionEvent e)
     {
+      filechooser.setSelectedFile(null);
+      filechooser.setSelectedFiles(null);
       filechooser.cancelSelection();
       closeDialog();
     }
   }
 
   /**
-   * DOCUMENT ME!
+   * An action to handle changes to the parent directory (for example, via
+   * a click on the "up folder" button).
+   * 
+   * @see BasicFileChooserUI#getChangeToParentDirectoryAction()
    */
   protected class ChangeToParentDirectoryAction extends AbstractAction
   {
     /**
-     * Creates a new ChangeToParentDirectoryAction object.
+     * Creates a new <code>ChangeToParentDirectoryAction</code> object.
      */
     protected ChangeToParentDirectoryAction()
     {
+      super("Go Up");
     }
 
     /**
-     * DOCUMENT ME!
+     * Handles the action event.
      *
-     * @param e DOCUMENT ME!
+     * @param e  the action event.
      */
     public void actionPerformed(ActionEvent e)
     {
@@ -330,12 +342,12 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * A mouse listener that handles double-click events.
+   * 
+   * @see BasicFileChooserUI#createDoubleClickListener(JFileChooser, JList)
    */
   protected class DoubleClickListener extends MouseAdapter
   {
-    /** DOCUMENT ME! */
-    private Timer timer = null;
 
     /** DOCUMENT ME! */
     private Object lastSelected = null;
@@ -351,61 +363,76 @@ public class BasicFileChooserUI extends FileChooserUI
     public DoubleClickListener(JList list)
     {
       this.list = list;
-      timer = new Timer(1000, null);
-      timer.setRepeats(false);
       lastSelected = list.getSelectedValue();
       setDirectorySelected(false);
     }
 
     /**
-     * DOCUMENT ME!
-     *
-     * @param e DOCUMENT ME!
+     * Handles a mouse click event.
+     * 
+     * @param e  the event.
      */
     public void mouseClicked(MouseEvent e)
     {
-      if (list.getSelectedValue() == null)
-	return;
+      Object p = list.getSelectedValue();
+      if (p == null)
+        return;
       FileSystemView fsv = filechooser.getFileSystemView();
-      if (timer.isRunning()
-          && list.getSelectedValue().toString().equals(lastSelected.toString()))
+      if (e.getClickCount() >= 2 && lastSelected != null &&
+          p.toString().equals(lastSelected.toString()))
         {
-	  File f = fsv.createFileObject(lastSelected.toString());
-	  timer.stop();
-	  if (filechooser.isTraversable(f))
-	    {
-	      filechooser.setCurrentDirectory(f);
-	      filechooser.rescanCurrentDirectory();
-	    }
-	  else
-	    {
-	      filechooser.setSelectedFile(f);
-	      filechooser.approveSelection();
-	      closeDialog();
-	    }
+          File f = fsv.createFileObject(lastSelected.toString());
+          if (filechooser.isTraversable(f))
+            {
+              filechooser.setCurrentDirectory(f);
+              filechooser.rescanCurrentDirectory();
+            }
+          else
+            {
+              filechooser.setSelectedFile(f);
+              filechooser.approveSelection();
+              closeDialog();
+            }
         }
       else
         {
-	  File f = fsv.createFileObject(list.getSelectedValue().toString());
-	  if (filechooser.isTraversable(f))
-	    {
-	      setDirectorySelected(true);
-	      setDirectory(f);
-	    }
-	  else
-	    {
-	      setDirectorySelected(false);
-	      setDirectory(null);
-	    }
-	  lastSelected = list.getSelectedValue().toString();
-	  timer.restart();
+          String path = p.toString();
+          File f = fsv.createFileObject(path);
+          filechooser.setSelectedFile(f);
+          
+          if (filechooser.isMultiSelectionEnabled())
+            {
+              int[] inds = list.getSelectedIndices();
+              File[] allFiles = new File[inds.length];
+              for (int i = 0; i < inds.length; i++)
+                allFiles[i] = (File) list.getModel().getElementAt(inds[i]);
+              filechooser.setSelectedFiles(allFiles);
+            }
+          
+          if (filechooser.isTraversable(f))
+            {
+              setDirectorySelected(true);
+              setDirectory(f);
+            }
+          else
+            {
+              setDirectorySelected(false);
+              setDirectory(null);
+            }
+          lastSelected = path;
+          parentPath = path.substring(0, path.lastIndexOf("/") + 1);
+          if (f.isFile())
+            setFileName(path.substring(path.lastIndexOf("/") + 1));
+          else if (filechooser.getFileSelectionMode() == 
+            JFileChooser.DIRECTORIES_ONLY)
+            setFileName(path);
         }
     }
 
     /**
-     * DOCUMENT ME!
-     *
-     * @param e DOCUMENT ME!
+     * Handles a mouse entered event (NOT IMPLEMENTED).
+     * 
+     * @param e  the mouse event.
      */
     public void mouseEntered(MouseEvent e)
     {
@@ -414,21 +441,26 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * An action that changes the file chooser to display the user's home 
+   * directory. 
+   * 
+   * @see BasicFileChooserUI#getGoHomeAction()
    */
   protected class GoHomeAction extends AbstractAction
   {
     /**
-     * Creates a new GoHomeAction object.
+     * Creates a new <code>GoHomeAction</code> object.
      */
     protected GoHomeAction()
     {
+      super("Go Home");
     }
 
     /**
-     * DOCUMENT ME!
+     * Sets the directory to the user's home directory, and repaints the
+     * file chooser component.
      *
-     * @param e DOCUMENT ME!
+     * @param e  the action event (ignored).
      */
     public void actionPerformed(ActionEvent e)
     {
@@ -440,21 +472,24 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * An action that handles the creation of a new folder/directory.
+   * 
+   * @see BasicFileChooserUI#getNewFolderAction()
    */
   protected class NewFolderAction extends AbstractAction
   {
     /**
-     * Creates a new NewFolderAction object.
+     * Creates a new <code>NewFolderAction</code> object.
      */
     protected NewFolderAction()
     {
+      super("New Folder");
     }
 
     /**
-     * DOCUMENT ME!
+     * Handles the event by creating a new folder.
      *
-     * @param e DOCUMENT ME!
+     * @param e  the action event (ignored).
      */
     public void actionPerformed(ActionEvent e)
     {
@@ -473,15 +508,18 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * A listener for selection events in the file list.
+   * 
+   * @see BasicFileChooserUI#createListSelectionListener(JFileChooser)
    */
   protected class SelectionListener implements ListSelectionListener
   {
     /**
-     * Creates a new SelectionListener object.
+     * Creates a new <code>SelectionListener</code> object.
      */
     protected SelectionListener()
     {
+      // Nothing to do here.
     }
 
     /**
@@ -491,7 +529,8 @@ public class BasicFileChooserUI extends FileChooserUI
      */
     public void valueChanged(ListSelectionEvent e)
     {
-      Object f = filelist.getSelectedValue();
+      JList list = (JList) e.getSource();
+      Object f = list.getSelectedValue();
       if (f == null)
 	return;
       File file = filechooser.getFileSystemView().createFileObject(f.toString());
@@ -504,6 +543,8 @@ public class BasicFileChooserUI extends FileChooserUI
 
   /**
    * DOCUMENT ME!
+   * 
+   * @see BasicFileChooserUI#getUpdateAction()
    */
   protected class UpdateAction extends AbstractAction
   {
@@ -512,521 +553,196 @@ public class BasicFileChooserUI extends FileChooserUI
      */
     protected UpdateAction()
     {
+      super(null);
     }
 
     /**
-     * DOCUMENT ME!
+     * NOT YET IMPLEMENTED.
      *
-     * @param e DOCUMENT ME!
+     * @param e  the action event.
      */
     public void actionPerformed(ActionEvent e)
     {
+      // FIXME: implement this
     }
   }
 
-  /** DOCUMENT ME! */
+  /** The localised mnemonic for the cancel button. */
   protected int cancelButtonMnemonic;
 
-  /** DOCUMENT ME! */
+  /** The localised text for the cancel button. */
   protected String cancelButtonText;
 
-  /** DOCUMENT ME! */
+  /** The localised tool tip text for the cancel button. */
   protected String cancelButtonToolTipText;
 
-  /** DOCUMENT ME! */
-  protected Icon computerIcon = new Icon()
-    {
-      public int getIconHeight()
-      {
-	return ICON_SIZE;
-      }
+  /** An icon representing a computer. */
+  protected Icon computerIcon;
 
-      public int getIconWidth()
-      {
-	return ICON_SIZE;
-      }
+  /** An icon for the "details view" button. */
+  protected Icon detailsViewIcon;
 
-      public void paintIcon(Component c, Graphics g, int x, int y)
-      {
-      }
-    };
+  /** An icon representing a directory. */
+  protected Icon directoryIcon;
 
-  /** DOCUMENT ME! */
-  protected Icon detailsViewIcon = new Icon()
-    {
-      public int getIconHeight()
-      {
-	return ICON_SIZE;
-      }
-
-      public int getIconWidth()
-      {
-	return ICON_SIZE;
-      }
-
-      public void paintIcon(Component c, Graphics g, int x, int y)
-      {
-	Color saved = g.getColor();
-	g.translate(x, y);
-
-	g.setColor(Color.GRAY);
-	g.drawRect(1, 1, 15, 20);
-	g.drawLine(17, 6, 23, 6);
-	g.drawLine(17, 12, 23, 12);
-	g.drawLine(17, 18, 23, 18);
-
-	g.setColor(saved);
-	g.translate(-x, -y);
-      }
-    };
-
-  /** DOCUMENT ME! */
-  protected Icon directoryIcon = new Icon()
-    {
-      public int getIconHeight()
-      {
-	return ICON_SIZE;
-      }
-
-      public int getIconWidth()
-      {
-	return ICON_SIZE;
-      }
-
-      public void paintIcon(Component c, Graphics g, int x, int y)
-      {
-	Color saved = g.getColor();
-	g.translate(x, y);
-
-	Point ap = new Point(3, 7);
-	Point bp = new Point(3, 21);
-	Point cp = new Point(21, 21);
-	Point dp = new Point(21, 12);
-	Point ep = new Point(16, 12);
-	Point fp = new Point(13, 7);
-
-	Polygon dir = new Polygon(new int[] { ap.x, bp.x, cp.x, dp.x, ep.x, fp.x },
-	                          new int[] { ap.y, bp.y, cp.y, dp.y, ep.y, fp.y },
-	                          6);
-
-	g.setColor(new Color(153, 204, 255));
-	g.fillPolygon(dir);
-	g.setColor(Color.BLACK);
-	g.drawPolygon(dir);
-
-	g.translate(-x, -y);
-	g.setColor(saved);
-      }
-    };
-
-  /** DOCUMENT ME! */
+  /** The localised Mnemonic for the open button. */
   protected int directoryOpenButtonMnemonic;
 
-  /** DOCUMENT ME! */
+  /** The localised text for the open button. */
   protected String directoryOpenButtonText;
 
-  /** DOCUMENT ME! */
+  /** The localised tool tip text for the open button. */
   protected String directoryOpenButtonToolTipText;
 
-  /** DOCUMENT ME! */
-  protected Icon fileIcon = new Icon()
-    {
-      public int getIconHeight()
-      {
-	return ICON_SIZE;
-      }
+  /** An icon representing a file. */
+  protected Icon fileIcon;
 
-      public int getIconWidth()
-      {
-	return ICON_SIZE;
-      }
+  /** An icon representing a floppy drive. */
+  protected Icon floppyDriveIcon;
 
-      public void paintIcon(Component c, Graphics g, int x, int y)
-      {
-	Color saved = g.getColor();
-	g.translate(x, y);
+  /** An icon representing a hard drive. */
+  protected Icon hardDriveIcon;
 
-	Point a = new Point(5, 4);
-	Point b = new Point(5, 20);
-	Point d = new Point(19, 20);
-	Point e = new Point(19, 7);
-	Point f = new Point(16, 4);
-
-	Polygon p = new Polygon(new int[] { a.x, b.x, d.x, e.x, f.x, },
-	                        new int[] { a.y, b.y, d.y, e.y, f.y }, 5);
-
-	g.setColor(Color.WHITE);
-	g.fillPolygon(p);
-	g.setColor(Color.BLACK);
-	g.drawPolygon(p);
-
-	g.drawLine(16, 4, 14, 6);
-	g.drawLine(14, 6, 19, 7);
-
-	g.setColor(saved);
-	g.translate(-x, -y);
-      }
-    };
-
-  /** DOCUMENT ME! */
-  protected Icon floppyDriveIcon = new Icon()
-    {
-      public int getIconHeight()
-      {
-	return ICON_SIZE;
-      }
-
-      public int getIconWidth()
-      {
-	return ICON_SIZE;
-      }
-
-      public void paintIcon(Component c, Graphics g, int x, int y)
-      {
-      }
-    };
-
-  /** DOCUMENT ME! */
-  protected Icon hardDriveIcon = new Icon()
-    {
-      public int getIconHeight()
-      {
-	return ICON_SIZE;
-      }
-
-      public int getIconWidth()
-      {
-	return ICON_SIZE;
-      }
-
-      public void paintIcon(Component c, Graphics g, int x, int y)
-      {
-      }
-    };
-
-  /** DOCUMENT ME! */
+  /** The localised mnemonic for the "help" button. */
   protected int helpButtonMnemonic;
 
-  /** DOCUMENT ME! */
+  /** The localised text for the "help" button. */
   protected String helpButtonText;
 
-  /** DOCUMENT ME! */
+  /** The localised tool tip text for the help button. */
   protected String helpButtonToolTipText;
 
-  /** DOCUMENT ME! */
-  protected Icon homeFolderIcon = new Icon()
-    {
-      public int getIconHeight()
-      {
-	return ICON_SIZE;
-      }
+  /** An icon representing the user's home folder. */
+  protected Icon homeFolderIcon;
 
-      public int getIconWidth()
-      {
-	return ICON_SIZE;
-      }
+  /** An icon for the "list view" button. */
+  protected Icon listViewIcon;
 
-      public void paintIcon(Component c, Graphics g, int x, int y)
-      {
-	Color saved = g.getColor();
-	g.translate(x, y);
-
-	Point a = new Point(12, 3);
-	Point b = new Point(4, 10);
-	Point d = new Point(20, 10);
-
-	Polygon p = new Polygon(new int[] { a.x, b.x, d.x },
-	                        new int[] { a.y, b.y, d.y }, 3);
-
-	g.setColor(new Color(104, 51, 0));
-	g.fillPolygon(p);
-	g.setColor(Color.BLACK);
-	g.drawPolygon(p);
-
-	g.setColor(Color.WHITE);
-	g.fillRect(8, 10, 8, 10);
-	g.setColor(Color.BLACK);
-	g.drawRect(8, 10, 8, 10);
-
-	g.setColor(saved);
-	g.translate(-x, -y);
-      }
-    };
-
-  /** DOCUMENT ME! */
-  protected Icon listViewIcon = new Icon()
-    {
-      public int getIconHeight()
-      {
-	return ICON_SIZE;
-      }
-
-      public int getIconWidth()
-      {
-	return ICON_SIZE;
-      }
-
-      // Not needed. Only simplifies things until we get real icons.
-      private void paintPartial(Graphics g, int x, int y)
-      {
-	Color saved = g.getColor();
-	g.translate(x, y);
-
-	g.setColor(Color.GRAY);
-	g.drawRect(1, 1, 7, 10);
-	g.drawLine(8, 6, 11, 6);
-
-	g.setColor(saved);
-	g.translate(-x, -y);
-      }
-
-      public void paintIcon(Component c, Graphics g, int x, int y)
-      {
-	Color saved = g.getColor();
-	g.translate(x, y);
-
-	paintPartial(g, 0, 0);
-	paintPartial(g, 12, 0);
-	paintPartial(g, 0, 12);
-	paintPartial(g, 12, 12);
-
-	g.setColor(saved);
-	g.translate(-x, -y);
-      }
-    };
-
-  /** DOCUMENT ME! */
+  /** An icon for the "new folder" button. */
   protected Icon newFolderIcon = directoryIcon;
 
-  /** DOCUMENT ME! */
+  /** The localised mnemonic for the "open" button. */
   protected int openButtonMnemonic;
 
-  /** DOCUMENT ME! */
+  /** The localised text for the "open" button. */
   protected String openButtonText;
 
-  /** DOCUMENT ME! */
+  /** The localised tool tip text for the "open" button. */
   protected String openButtonToolTipText;
 
-  /** DOCUMENT ME! */
+  /** The localised mnemonic for the "save" button. */
   protected int saveButtonMnemonic;
 
-  /** DOCUMENT ME! */
+  /** The localised text for the "save" button. */
   protected String saveButtonText;
 
-  /** DOCUMENT ME! */
+  /** The localised tool tip text for the save button. */
   protected String saveButtonToolTipText;
 
-  /** DOCUMENT ME! */
+  /** The localised mnemonic for the "update" button. */
   protected int updateButtonMnemonic;
 
-  /** DOCUMENT ME! */
+  /** The localised text for the "update" button. */
   protected String updateButtonText;
 
-  /** DOCUMENT ME! */
+  /** The localised tool tip text for the "update" button. */
   protected String updateButtonToolTipText;
 
-  /** DOCUMENT ME! */
-  protected Icon upFolderIcon = new Icon()
-    {
-      public int getIconHeight()
-      {
-	return ICON_SIZE;
-      }
-
-      public int getIconWidth()
-      {
-	return ICON_SIZE;
-      }
-
-      public void paintIcon(Component comp, Graphics g, int x, int y)
-      {
-	Color saved = g.getColor();
-	g.translate(x, y);
-
-	Point a = new Point(3, 7);
-	Point b = new Point(3, 21);
-	Point c = new Point(21, 21);
-	Point d = new Point(21, 12);
-	Point e = new Point(16, 12);
-	Point f = new Point(13, 7);
-
-	Polygon dir = new Polygon(new int[] { a.x, b.x, c.x, d.x, e.x, f.x },
-	                          new int[] { a.y, b.y, c.y, d.y, e.y, f.y }, 6);
-
-	g.setColor(new Color(153, 204, 255));
-	g.fillPolygon(dir);
-	g.setColor(Color.BLACK);
-	g.drawPolygon(dir);
-
-	a = new Point(12, 15);
-	b = new Point(9, 18);
-	c = new Point(15, 18);
-
-	Polygon arrow = new Polygon(new int[] { a.x, b.x, c.x },
-	                            new int[] { a.y, b.y, c.y }, 3);
-
-	g.fillPolygon(arrow);
-
-	g.drawLine(12, 15, 12, 22);
-
-	g.translate(-x, -y);
-	g.setColor(saved);
-      }
-    };
+  /** An icon for the "up folder" button. */
+  protected Icon upFolderIcon;
 
   // -- begin private, but package local since used in inner classes --
 
+  /** The file chooser component represented by this UI delegate. */
   JFileChooser filechooser;
 
-  /** DOCUMENT ME! */
-  JList filelist;
-
-  /** DOCUMENT ME! */
-  JComboBox filters;
-
-  /** DOCUMENT ME! */
+  /** The model for the directory list. */
   BasicDirectoryModel model;
 
-  /** DOCUMENT ME! */
+  /** The file filter for all files. */
   FileFilter acceptAll = new AcceptAllFileFilter();
 
-  /** DOCUMENT ME! */
+  /** The default file view. */
   FileView fv = new BasicFileView();
 
-  /** DOCUMENT ME! */
-  static final int ICON_SIZE = 24;
-
-  /** DOCUMENT ME! */
-  JComboBox parents;
-
-  /** DOCUMENT ME! */
-  String filename;
-
-  /** DOCUMENT ME! */
+  /** The accept (open/save) button. */
   JButton accept;
 
-  /** DOCUMENT ME! */
-  JButton cancel;
+  /** An optional accessory panel. */
+  JPanel accessoryPanel = new JPanel();
 
-  /** DOCUMENT ME! */
-  JButton upFolderButton;
-
-  /** DOCUMENT ME! */
-  JButton newFolderButton;
-
-  /** DOCUMENT ME! */
-  JButton homeFolderButton;
-
-  /** DOCUMENT ME! */
-  JPanel accessoryPanel;
-
-  /** DOCUMENT ME! */
+  /** A property change listener. */
   PropertyChangeListener propertyChangeListener;
 
-  /** DOCUMENT ME! */
+  /** The text describing the filter for "all files". */
   String acceptAllFileFilterText;
 
-  /** DOCUMENT ME! */
+  /** The text describing a directory type. */
   String dirDescText;
 
-  /** DOCUMENT ME! */
+  /** The text describing a file type. */
   String fileDescText;
 
-  /** DOCUMENT ME! */
+  /** Is a directory selected? */
   boolean dirSelected = false;
 
-  /** DOCUMENT ME! */
+  /** The current directory. */
   File currDir = null;
 
+  // FIXME: describe what is contained in the bottom panel
+  /** The bottom panel. */
   JPanel bottomPanel;
-
-  /** DOCUMENT ME! */
+  
+  /** The close panel. */
   JPanel closePanel;
 
+  /** Text box that displays file name */
+  JTextField entry;
+    
+  /** Current parent path */
+  String parentPath;
+  
+  /**
+   * The action for the 'approve' button.
+   * @see #getApproveSelectionAction()
+   */
+  private ApproveSelectionAction approveSelectionAction;
+  
+  /**
+   * The action for the 'cancel' button.
+   * @see #getCancelSelectionAction()
+   */
+  private CancelSelectionAction cancelSelectionAction;
+  
+  /**
+   * The action for the 'go home' control button.
+   * @see #getGoHomeAction()
+   */
+  private GoHomeAction goHomeAction;
+  
+  /**
+   * The action for the 'up folder' control button.
+   * @see #getChangeToParentDirectoryAction()
+   */
+  private ChangeToParentDirectoryAction changeToParentDirectoryAction;
+  
+  /**
+   * The action for the 'new folder' control button.
+   * @see #getNewFolderAction()
+   */
+  private NewFolderAction newFolderAction;
+  
+  /**
+   * The action for ???.  // FIXME: what is this?
+   * @see #getUpdateAction()
+   */
+  private UpdateAction updateAction;
+  
   // -- end private --
-  private class ListLabelRenderer
-    extends JLabel
-    implements ListCellRenderer
-  {
-    /** DOCUMENT ME! */
-    final Color selected = new Color(153, 204, 255);
-
-    /**
-     * Creates a new ListLabelRenderer object.
-     */
-    public ListLabelRenderer()
-    {
-      super();
-      setOpaque(true);
-    }
-
-    /**
-     * DOCUMENT ME!
-     *
-     * @param list DOCUMENT ME!
-     * @param value DOCUMENT ME!
-     * @param index DOCUMENT ME!
-     * @param isSelected DOCUMENT ME!
-     * @param cellHasFocus DOCUMENT ME!
-     *
-     * @return DOCUMENT ME!
-     */
-    public Component getListCellRendererComponent(JList list, Object value,
-                                                  int index,
-                                                  boolean isSelected,
-                                                  boolean cellHasFocus)
-    {
-      setHorizontalAlignment(SwingConstants.LEFT);
-      File file = (File) value;
-      setText(filechooser.getName(file));
-      setIcon(filechooser.getIcon(file));
-      setBackground(isSelected ? selected : Color.WHITE);
-      setForeground(Color.BLACK);
-
-      return this;
-    }
-  }
 
   /**
-   * DOCUMENT ME!
+   * Closes the dialog.
    */
-  public class CBLabelRenderer extends JLabel implements ListCellRenderer
-  {
-    /**
-     * Creates a new CBLabelRenderer object.
-     */
-    public CBLabelRenderer()
-    {
-      super();
-      setOpaque(true);
-    }
-
-    /**
-     * DOCUMENT ME!
-     *
-     * @param list DOCUMENT ME!
-     * @param value DOCUMENT ME!
-     * @param index DOCUMENT ME!
-     * @param isSelected DOCUMENT ME!
-     * @param cellHasFocus DOCUMENT ME!
-     *
-     * @return DOCUMENT ME!
-     */
-    public Component getListCellRendererComponent(JList list, Object value,
-                                                  int index,
-                                                  boolean isSelected,
-                                                  boolean cellHasFocus)
-    {
-      setHorizontalAlignment(SwingConstants.LEFT);
-      setIcon(directoryIcon);
-      setText(value.toString());
-      setForeground(Color.BLACK);
-      setBackground(Color.WHITE);
-
-      return this;
-    }
-  }
-
   void closeDialog()
   {
     Window owner = SwingUtilities.windowForComponent(filechooser);
@@ -1035,21 +751,20 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * Creates a new BasicFileChooserUI object.
+   * Creates a new <code>BasicFileChooserUI</code> object.
    *
-   * @param b DOCUMENT ME!
+   * @param b  the file chooser component.
    */
   public BasicFileChooserUI(JFileChooser b)
   {
-    this.filechooser = b;
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns a UI delegate for the given component.
    *
-   * @param c DOCUMENT ME!
+   * @param c  the component (should be a {@link JFileChooser}).
    *
-   * @return DOCUMENT ME!
+   * @return A new UI delegate.
    */
   public static ComponentUI createUI(JComponent c)
   {
@@ -1057,28 +772,33 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
-   *
-   * @param c DOCUMENT ME!
+   * Installs the UI for the specified component.
+   * 
+   * @param c  the component (should be a {@link JFileChooser}).
    */
   public void installUI(JComponent c)
   {
     if (c instanceof JFileChooser)
       {
-	JFileChooser fc = (JFileChooser) c;
-	fc.resetChoosableFileFilters();
-	createModel();
-	clearIconCache();
-	installDefaults(fc);
-	installComponents(fc);
-	installListeners(fc);
+        JFileChooser fc = (JFileChooser) c;
+        this.filechooser = fc;
+        fc.resetChoosableFileFilters();
+        createModel();
+        clearIconCache();
+        installDefaults(fc);
+        installComponents(fc);
+        installListeners(fc);
+        
+        Object path = filechooser.getCurrentDirectory();
+        if (path != null)
+          parentPath = path.toString().substring(path.toString().lastIndexOf("/"));
       }
   }
 
   /**
-   * DOCUMENT ME!
-   *
-   * @param c DOCUMENT ME!
+   * Uninstalls this UI from the given component.
+   * 
+   * @param c  the component (should be a {@link JFileChooser}).
    */
   public void uninstallUI(JComponent c)
   {
@@ -1111,247 +831,41 @@ public class BasicFileChooserUI extends FileChooserUI
     if (parentFiles.size() == 0)
       return;
 
-    if (parents.getItemCount() > 0)
-      parents.removeAllItems();
-    for (int i = parentFiles.size() - 1; i >= 0; i--)
-      parents.addItem(parentFiles.get(i));
-    parents.setSelectedIndex(parentFiles.size() - 1);
-    parents.revalidate();
-    parents.repaint();
-  }
+  }  
 
   /**
-   * DOCUMENT ME!
+   * Creates and install the subcomponents for the file chooser.
    *
-   * @return DOCUMENT ME!
-   */
-  private ItemListener createBoxListener()
-  {
-    return new ItemListener()
-      {
-	public void itemStateChanged(ItemEvent e)
-	{
-	  if (parents.getItemCount() - 1 == parents.getSelectedIndex())
-	    return;
-	  StringBuffer dir = new StringBuffer();
-	  for (int i = 0; i <= parents.getSelectedIndex(); i++)
-	    {
-	      dir.append(parents.getItemAt(i));
-	      dir.append(File.separatorChar);
-	    }
-	  filechooser.setCurrentDirectory(filechooser.getFileSystemView()
-	                                             .createFileObject(dir
-	                                                               .toString()));
-	}
-      };
-  }
-
-  /**
-   * DOCUMENT ME!
-   *
-   * @return DOCUMENT ME!
-   */
-  private ItemListener createFilterListener()
-  {
-    return new ItemListener()
-      {
-	public void itemStateChanged(ItemEvent e)
-	{
-	  int index = filters.getSelectedIndex();
-	  if (index == -1)
-	    return;
-	  filechooser.setFileFilter(filechooser.getChoosableFileFilters()[index]);
-	}
-      };
-  }
-
-  void filterEntries()
-  {
-    FileFilter[] list = filechooser.getChoosableFileFilters();
-    if (filters.getItemCount() > 0)
-      filters.removeAllItems();
-
-    int index = -1;
-    String selected = filechooser.getFileFilter().getDescription();
-    for (int i = 0; i < list.length; i++)
-      {
-	if (selected.equals(list[i].getDescription()))
-	  index = i;
-	filters.addItem(list[i].getDescription());
-      }
-    filters.setSelectedIndex(index);
-    filters.revalidate();
-    filters.repaint();
-  }
-
-  /**
-   * DOCUMENT ME!
-   *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser.
    */
   public void installComponents(JFileChooser fc)
   {
-    JLabel look = new JLabel("Look In:");
-
-    parents = new JComboBox();
-    parents.setRenderer(new CBLabelRenderer());
-    boxEntries();
-    look.setLabelFor(parents);
-    JPanel parentsPanel = new JPanel();
-    parentsPanel.add(look);
-    parentsPanel.add(parents);
-    JPanel buttonPanel = new JPanel();
-
-    upFolderButton = new JButton();
-    upFolderButton.setIcon(upFolderIcon);
-    buttonPanel.add(upFolderButton);
-
-    homeFolderButton = new JButton();
-    homeFolderButton = new JButton(homeFolderIcon);
-    buttonPanel.add(homeFolderButton);
-
-    newFolderButton = new JButton();
-    newFolderButton.setIcon(newFolderIcon);
-    buttonPanel.add(newFolderButton);
-
-    ButtonGroup toggles = new ButtonGroup();
-    JToggleButton listViewButton = new JToggleButton();
-    listViewButton.setIcon(listViewIcon);
-    toggles.add(listViewButton);
-    buttonPanel.add(listViewButton);
-
-    JToggleButton detailsViewButton = new JToggleButton();
-    detailsViewButton.setIcon(detailsViewIcon);
-    toggles.add(detailsViewButton);
-    buttonPanel.add(detailsViewButton);
-
-    JPanel topPanel = new JPanel();
-    topPanel.setLayout(new java.awt.FlowLayout());
-    topPanel.add(parentsPanel);
-    topPanel.add(buttonPanel);
-
-    accessoryPanel = new JPanel();
-    if (filechooser.getAccessory() != null)
-      accessoryPanel.add(filechooser.getAccessory(), BorderLayout.CENTER);
-
-    filelist = new JList(model);
-    filelist.setVisibleRowCount(6);
-    JScrollPane scrollp = new JScrollPane(filelist);
-    scrollp.setPreferredSize(new Dimension(400, 175));
-    filelist.setBackground(Color.WHITE);
-
-    filelist.setLayoutOrientation(JList.VERTICAL_WRAP);
-    filelist.setCellRenderer(new ListLabelRenderer());
-
-    GridBagConstraints c = new GridBagConstraints();
-    c.gridx = 0;
-    c.gridy = 0;
-    c.fill = GridBagConstraints.BOTH;
-    c.weightx = 1;
-    c.weighty = 1;
-
-    JPanel centrePanel = new JPanel();
-    centrePanel.setLayout(new GridBagLayout());
-    centrePanel.add(scrollp, c);
-
-    c.gridx = 1;
-    centrePanel.add(accessoryPanel, c);
-
-    JLabel fileNameLabel = new JLabel("File Name:");
-    JLabel fileTypesLabel = new JLabel("Files of Type:");
-
-    JTextField entry = new JTextField();
-    filters = new JComboBox();
-    filterEntries();
-
-    fileNameLabel.setLabelFor(entry);
-    fileNameLabel.setHorizontalTextPosition(SwingConstants.LEFT);
-    fileTypesLabel.setLabelFor(filters);
-    fileTypesLabel.setHorizontalTextPosition(SwingConstants.LEFT);
-
-    closePanel = new JPanel();
-    accept = getApproveButton(filechooser);
-    cancel = new JButton(cancelButtonText);
-    cancel.setMnemonic(cancelButtonMnemonic);
-    cancel.setToolTipText(cancelButtonToolTipText);
-    closePanel.add(accept);
-    closePanel.add(cancel);
-
-    c.anchor = GridBagConstraints.WEST;
-    c.weighty = 0;
-    c.weightx = 0;
-    c.gridx = 0;
-
-    bottomPanel = new JPanel();
-    bottomPanel.setLayout(new GridBagLayout());
-    bottomPanel.add(fileNameLabel, c);
-
-    c.gridy = 1;
-    bottomPanel.add(fileTypesLabel, c);
-    c.gridx = 1;
-    c.gridy = 0;
-    c.weightx = 1;
-    c.weighty = 1;
-    bottomPanel.add(entry, c);
-
-    c.gridy = 1;
-    bottomPanel.add(filters, c);
-
-    c.fill = GridBagConstraints.NONE;
-    c.gridy = 2;
-    c.anchor = GridBagConstraints.EAST;
-    bottomPanel.add(closePanel, c);
-
-    filechooser.setLayout(new BorderLayout());
-    filechooser.add(topPanel, BorderLayout.NORTH);
-    filechooser.add(centrePanel, BorderLayout.CENTER);
-    filechooser.add(bottomPanel, BorderLayout.SOUTH);
   }
 
   /**
-   * DOCUMENT ME!
+   * Uninstalls the components from the file chooser.
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser.
    */
   public void uninstallComponents(JFileChooser fc)
   {
-    parents = null;
-
-    accept = null;
-    cancel = null;
-    upFolderButton = null;
-    homeFolderButton = null;
-    newFolderButton = null;
-
-    filelist = null;
   }
 
   /**
-   * DOCUMENT ME!
+   * Installs the listeners required by this UI delegate.
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser.
    */
   protected void installListeners(JFileChooser fc)
   {
     propertyChangeListener = createPropertyChangeListener(filechooser);
     filechooser.addPropertyChangeListener(propertyChangeListener);
-
-    //parents.addItemListener(createBoxListener());
-    accept.addActionListener(getApproveSelectionAction());
-    cancel.addActionListener(getCancelSelectionAction());
-    upFolderButton.addActionListener(getChangeToParentDirectoryAction());
-    homeFolderButton.addActionListener(getGoHomeAction());
-    newFolderButton.addActionListener(getNewFolderAction());
-    filters.addItemListener(createFilterListener());
-
-    filelist.addMouseListener(createDoubleClickListener(filechooser, filelist));
-    filelist.addListSelectionListener(createListSelectionListener(filechooser));
   }
 
   /**
-   * DOCUMENT ME!
+   * Uninstalls the listeners previously installed by this UI delegate.
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser.
    */
   protected void uninstallListeners(JFileChooser fc)
   {
@@ -1360,9 +874,9 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Installs the defaults for this UI delegate.
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser.
    */
   protected void installDefaults(JFileChooser fc)
   {
@@ -1371,9 +885,9 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Uninstalls the defaults previously added by this UI delegate.
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser.
    */
   protected void uninstallDefaults(JFileChooser fc)
   {
@@ -1382,85 +896,115 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Installs the icons for this UI delegate.
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser (ignored).
    */
   protected void installIcons(JFileChooser fc)
   {
-    // FIXME: Implement.
+    UIDefaults defaults = UIManager.getLookAndFeelDefaults();
+    computerIcon = MetalIconFactory.getTreeComputerIcon();
+    detailsViewIcon = defaults.getIcon("FileChooser.detailsViewIcon");
+    directoryIcon = new MetalIconFactory.TreeFolderIcon();
+    fileIcon = new MetalIconFactory.TreeLeafIcon();
+    floppyDriveIcon = MetalIconFactory.getTreeFloppyDriveIcon();
+    hardDriveIcon = MetalIconFactory.getTreeHardDriveIcon();
+    homeFolderIcon = defaults.getIcon("FileChooser.homeFolderIcon");
+    listViewIcon = defaults.getIcon("FileChooser.listViewIcon");
+    newFolderIcon = defaults.getIcon("FileChooser.newFolderIcon");
+    upFolderIcon = defaults.getIcon("FileChooser.upFolderIcon");
   }
 
   /**
-   * DOCUMENT ME!
+   * Uninstalls the icons previously added by this UI delegate.
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser.
    */
   protected void uninstallIcons(JFileChooser fc)
   {
-    // FIXME: Implement.
+    computerIcon = null;
+    detailsViewIcon = null;
+    directoryIcon = null;
+    fileIcon = null;
+    floppyDriveIcon = null;
+    hardDriveIcon = null;
+    homeFolderIcon = null;
+    listViewIcon = null;
+    newFolderIcon = null;
+    upFolderIcon = null;
   }
 
   /**
-   * DOCUMENT ME!
+   * Installs the strings used by this UI delegate.
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser.
    */
   protected void installStrings(JFileChooser fc)
   {
     UIDefaults defaults = UIManager.getLookAndFeelDefaults();
 
-    acceptAllFileFilterText = defaults.getString("FileChooser.acceptAllFileFilterText");
-    cancelButtonMnemonic = defaults.getInt("FileChooser.cancelButtonMnemonic");
-    cancelButtonText = defaults.getString("FileChooser.cancelButtonText");
-    cancelButtonToolTipText = defaults.getString("FileChooser.cancelButtonToolTipText");
-
     dirDescText = defaults.getString("FileChooser.directoryDescriptionText");
     fileDescText = defaults.getString("FileChooser.fileDescriptionText");
 
-    helpButtonMnemonic = defaults.getInt("FileChooser.helpButtonMnemonic");
-    helpButtonText = defaults.getString("FileChooser.helpButtonText");
-    helpButtonToolTipText = defaults.getString("FileChooser.helpButtonToolTipText");
+    acceptAllFileFilterText = defaults.getString("FileChooser.acceptAllFileFilterText");
+    cancelButtonText = "Cancel";
+    cancelButtonToolTipText = "Abort file chooser dialog";
+    cancelButtonMnemonic = new Integer((String) UIManager.get("FileChooser.cancelButtonMnemonic")).intValue();
 
-    openButtonMnemonic = defaults.getInt("FileChooser.openButtonMnemonic");
-    openButtonText = defaults.getString("FileChooser.openButtonText");
-    openButtonToolTipText = defaults.getString("FileChooser.openButtonToolTipText");
+    directoryOpenButtonText = "Open";
+    directoryOpenButtonToolTipText = "Open selected directory";
+    directoryOpenButtonMnemonic 
+        = new Integer((String) UIManager.get("FileChooser.directoryOpenButtonMnemonic")).intValue();
+    
+    helpButtonText = "Help";
+    helpButtonToolTipText = "FileChooser help";
+    helpButtonMnemonic = new Integer((String) UIManager.get("FileChooser.helpButtonMnemonic")).intValue();
 
-    saveButtonMnemonic = defaults.getInt("FileChooser.saveButtonMnemonic");
-    saveButtonText = defaults.getString("FileChooser.saveButtonText");
-    saveButtonToolTipText = defaults.getString("FileChooser.saveButtonToolTipText");
+    openButtonText = "Open";
+    openButtonToolTipText = "Open selected file";
+    openButtonMnemonic = new Integer((String) UIManager.get("FileChooser.openButtonMnemonic")).intValue();
+
+    saveButtonText = "Save";
+    saveButtonToolTipText = "Save selected file";
+    saveButtonMnemonic = new Integer((String) UIManager.get("FileChooser.saveButtonMnemonic")).intValue();
+  
+    updateButtonText = "Update";
+    updateButtonToolTipText = "Update directory listing";
+    updateButtonMnemonic = new Integer((String) UIManager.get("FileChooser.updateButtonMnemonic")).intValue();
   }
 
   /**
-   * DOCUMENT ME!
+   * Uninstalls the strings previously added by this UI delegate.
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser.
    */
   protected void uninstallStrings(JFileChooser fc)
   {
     acceptAllFileFilterText = null;
-    cancelButtonMnemonic = 0;
-    cancelButtonText = null;
-    cancelButtonToolTipText = null;
-
     dirDescText = null;
     fileDescText = null;
 
-    helpButtonMnemonic = 0;
+    cancelButtonText = null;
+    cancelButtonToolTipText = null;
+
+    directoryOpenButtonText = null;
+    directoryOpenButtonToolTipText = null;
+
     helpButtonText = null;
     helpButtonToolTipText = null;
 
-    openButtonMnemonic = 0;
     openButtonText = null;
     openButtonToolTipText = null;
 
-    saveButtonMnemonic = 0;
     saveButtonText = null;
     saveButtonToolTipText = null;
+    
+    updateButtonText = null;
+    updateButtonToolTipText = null;
   }
 
   /**
-   * DOCUMENT ME!
+   * Creates a new directory model.
    */
   protected void createModel()
   {
@@ -1468,9 +1012,9 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns the directory model.
    *
-   * @return DOCUMENT ME!
+   * @return The directory model.
    */
   public BasicDirectoryModel getModel()
   {
@@ -1478,125 +1022,41 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
-   *
-   * @param fc DOCUMENT ME!
-   *
-   * @return DOCUMENT ME!
+   * Creates a listener to handle changes to the properties of the given
+   * file chooser component.
+   * 
+   * @param fc  the file chooser component.
+   * 
+   * @return A new listener.
    */
   public PropertyChangeListener createPropertyChangeListener(JFileChooser fc)
   {
     return new PropertyChangeListener()
+    {
+      public void propertyChange(PropertyChangeEvent e)
       {
-	public void propertyChange(PropertyChangeEvent e)
-	{
-	  // FIXME: Multiple file selection waiting on JList multiple selection bug.
-	  if (e.getPropertyName().equals(JFileChooser.SELECTED_FILE_CHANGED_PROPERTY))
-	    {
-	      if (filechooser.getSelectedFile() == null)
-		setFileName(null);
-	      else
-		setFileName(filechooser.getSelectedFile().toString());
-	      int index = -1;
-	      File file = filechooser.getSelectedFile();
-	      for (index = 0; index < model.getSize(); index++)
-		if (((File) model.getElementAt(index)).equals(file))
-		  break;
-	      if (index == -1)
-		return;
-	      filelist.setSelectedIndex(index);
-	      filelist.ensureIndexIsVisible(index);
-	      filelist.revalidate();
-	      filelist.repaint();
-	    }
-	  else if (e.getPropertyName().equals(JFileChooser.DIRECTORY_CHANGED_PROPERTY))
-	    {
-	      filelist.clearSelection();
-	      filelist.revalidate();
-	      filelist.repaint();
-	      setDirectorySelected(false);
-	      setDirectory(filechooser.getCurrentDirectory());
-	      boxEntries();
-	    }
-	  else if (e.getPropertyName().equals(JFileChooser.CHOOSABLE_FILE_FILTER_CHANGED_PROPERTY)
-	           || e.getPropertyName().equals(JFileChooser.FILE_FILTER_CHANGED_PROPERTY))
-	    filterEntries();
-	  else if (e.getPropertyName().equals(JFileChooser.DIALOG_TYPE_CHANGED_PROPERTY)
-	           || e.getPropertyName().equals(JFileChooser.DIALOG_TITLE_CHANGED_PROPERTY))
-	    {
-	      Window owner = SwingUtilities.windowForComponent(filechooser);
-	      if (owner instanceof JDialog)
-		((JDialog) owner).setTitle(getDialogTitle(filechooser));
-	      accept.setText(getApproveButtonText(filechooser));
-	      accept.setToolTipText(getApproveButtonToolTipText(filechooser));
-	      accept.setMnemonic(getApproveButtonMnemonic(filechooser));
-	    }
-	  else if (e.getPropertyName().equals(JFileChooser.APPROVE_BUTTON_TEXT_CHANGED_PROPERTY))
-	    accept.setText(getApproveButtonText(filechooser));
-	  else if (e.getPropertyName().equals(JFileChooser.APPROVE_BUTTON_TOOL_TIP_TEXT_CHANGED_PROPERTY))
-	    accept.setToolTipText(getApproveButtonToolTipText(filechooser));
-	  else if (e.getPropertyName().equals(JFileChooser.APPROVE_BUTTON_MNEMONIC_CHANGED_PROPERTY))
-	    accept.setMnemonic(getApproveButtonMnemonic(filechooser));
-	  else if (e.getPropertyName().equals(JFileChooser.CONTROL_BUTTONS_ARE_SHOWN_CHANGED_PROPERTY))
-	    {
-	      if (filechooser.getControlButtonsAreShown())
-	        {
-		  GridBagConstraints c = new GridBagConstraints();
-		  c.gridy = 1;
-		  bottomPanel.add(filters, c);
-
-		  c.fill = GridBagConstraints.BOTH;
-		  c.gridy = 2;
-		  c.anchor = GridBagConstraints.EAST;
-		  bottomPanel.add(closePanel, c);
-		  bottomPanel.revalidate();
-		  bottomPanel.repaint();
-		  bottomPanel.doLayout();
-	        }
-	      else
-		bottomPanel.remove(closePanel);
-	    }
-	  else if (e.getPropertyName().equals(JFileChooser.ACCEPT_ALL_FILE_FILTER_USED_CHANGED_PROPERTY))
-	    {
-	      if (filechooser.isAcceptAllFileFilterUsed())
-		filechooser.addChoosableFileFilter(getAcceptAllFileFilter(filechooser));
-	      else
-		filechooser.removeChoosableFileFilter(getAcceptAllFileFilter(filechooser));
-	    }
-	  else if (e.getPropertyName().equals(JFileChooser.ACCESSORY_CHANGED_PROPERTY))
-	    {
-	      JComponent old = (JComponent) e.getOldValue();
-	      if (old != null)
-		getAccessoryPanel().remove(old);
-	      JComponent newval = (JComponent) e.getNewValue();
-	      if (newval != null)
-		getAccessoryPanel().add(newval);
-	    }
-	  if (e.getPropertyName().equals(JFileChooser.DIRECTORY_CHANGED_PROPERTY)
-	      || e.getPropertyName().equals(JFileChooser.FILE_FILTER_CHANGED_PROPERTY)
-	      || e.getPropertyName().equals(JFileChooser.FILE_HIDING_CHANGED_PROPERTY))
-	    rescanCurrentDirectory(filechooser);
-
-	  filechooser.revalidate();
-	  filechooser.repaint();
-	}
-      };
+      }
+    };
   }
 
   /**
-   * DOCUMENT ME!
-   *
-   * @return DOCUMENT ME!
+   * Returns the current file name.
+   * 
+   * @return The current file name.
    */
   public String getFileName()
   {
-    return filename;
+    // FIXME: I'm thinking that this method just provides access to the
+    // text value in the JTextField component...but not sure yet
+    return null;  //filename;
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns the current directory name.
    *
-   * @return DOCUMENT ME!
+   * @return The directory name.
+   * 
+   * @see #setDirectoryName(String)
    */
   public String getDirectoryName()
   {
@@ -1605,19 +1065,25 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Sets the file name.
    *
-   * @param filename DOCUMENT ME!
+   * @param filename  the file name.
+   * 
+   * @see #getFileName()
    */
   public void setFileName(String filename)
   {
-    this.filename = filename;
+    // FIXME:  it might be the case that this method provides an access 
+    // point for the JTextField (or whatever) a subclass is using...
+    //this.filename = filename;
   }
 
   /**
-   * DOCUMENT ME!
+   * Sets the directory name (NOT IMPLEMENTED).
    *
-   * @param dirname DOCUMENT ME!
+   * @param dirname  the directory name.
+   * 
+   * @see #getDirectoryName()
    */
   public void setDirectoryName(String dirname)
   {
@@ -1625,21 +1091,20 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Rescans the current directory.
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser.
    */
   public void rescanCurrentDirectory(JFileChooser fc)
   {
     getModel().validateFileCache();
-    filelist.revalidate();
   }
 
   /**
-   * DOCUMENT ME!
+   * NOT YET IMPLEMENTED.
    *
-   * @param fc DOCUMENT ME!
-   * @param f DOCUMENT ME!
+   * @param fc  the file chooser.
+   * @param f  the file.
    */
   public void ensureFileIsVisible(JFileChooser fc, File f)
   {
@@ -1647,9 +1112,10 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns the {@link JFileChooser} component that this UI delegate 
+   * represents.
    *
-   * @return DOCUMENT ME!
+   * @return The component represented by this UI delegate.
    */
   public JFileChooser getFileChooser()
   {
@@ -1657,9 +1123,9 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns the optional accessory panel.
    *
-   * @return DOCUMENT ME!
+   * @return The optional accessory panel.
    */
   public JPanel getAccessoryPanel()
   {
@@ -1667,26 +1133,26 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns the approve (open or save) button for the dialog.
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser.
    *
-   * @return DOCUMENT ME!
+   * @return The button.
    */
-  public JButton getApproveButton(JFileChooser fc)
+  protected JButton getApproveButton(JFileChooser fc)
   {
-    accept = new JButton(getApproveButtonText(fc));
-    accept.setMnemonic(getApproveButtonMnemonic(fc));
-    accept.setToolTipText(getApproveButtonToolTipText(fc));
     return accept;
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns the tool tip text for the approve (open/save) button.  This first
+   * checks the file chooser to see if a value has been explicitly set - if
+   * not, a default value appropriate for the type of file chooser is 
+   * returned.
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser.
    *
-   * @return DOCUMENT ME!
+   * @return The tool tip text.
    */
   public String getApproveButtonToolTipText(JFileChooser fc)
   {
@@ -1699,7 +1165,7 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Clears the icon cache.
    */
   public void clearIconCache()
   {
@@ -1708,11 +1174,11 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Creates a new listener to handle selections in the file list.
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser component.
    *
-   * @return DOCUMENT ME!
+   * @return A new instance of {@link SelectionListener}.
    */
   public ListSelectionListener createListSelectionListener(JFileChooser fc)
   {
@@ -1720,12 +1186,12 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Creates a new listener to handle double-click events.
    *
-   * @param fc DOCUMENT ME!
-   * @param list DOCUMENT ME!
+   * @param fc  the file chooser component.
+   * @param list  the list.
    *
-   * @return DOCUMENT ME!
+   * @return A new instance of {@link DoubleClickListener}.
    */
   protected MouseListener createDoubleClickListener(JFileChooser fc, JList list)
   {
@@ -1733,9 +1199,10 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns <code>true</code> if a directory is selected, and 
+   * <code>false</code> otherwise.
    *
-   * @return DOCUMENT ME!
+   * @return A boolean.
    */
   protected boolean isDirectorySelected()
   {
@@ -1743,9 +1210,9 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Sets the flag that indicates whether the current directory is selected.
    *
-   * @param selected DOCUMENT ME!
+   * @param selected  the new flag value.
    */
   protected void setDirectorySelected(boolean selected)
   {
@@ -1753,9 +1220,9 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns the current directory.
    *
-   * @return DOCUMENT ME!
+   * @return The current directory.
    */
   protected File getDirectory()
   {
@@ -1763,9 +1230,9 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Sets the current directory.
    *
-   * @param f DOCUMENT ME!
+   * @param f  the directory.
    */
   protected void setDirectory(File f)
   {
@@ -1773,11 +1240,11 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns the "accept all" file filter.
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser component.
    *
-   * @return DOCUMENT ME!
+   * @return The "accept all" file filter.
    */
   public FileFilter getAcceptAllFileFilter(JFileChooser fc)
   {
@@ -1785,54 +1252,45 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns the default file view (NOT the file view from the file chooser,
+   * if there is one).
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser component.
    *
-   * @return DOCUMENT ME!
+   * @return The file view.
+   * 
+   * @see JFileChooser#getFileView()
    */
   public FileView getFileView(JFileChooser fc)
   {
-    if (fc.getFileView() != null)
-      return fc.getFileView();
     return fv;
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns the dialog title.
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser (<code>null</code> not permitted).
    *
-   * @return DOCUMENT ME!
+   * @return The dialog title.
+   * 
+   * @see JFileChooser#getDialogTitle()
    */
   public String getDialogTitle(JFileChooser fc)
   {
-    String ret = fc.getDialogTitle();
-    if (ret != null)
-      return ret;
-    switch (fc.getDialogType())
-      {
-      case JFileChooser.OPEN_DIALOG:
-	ret = openButtonText;
-	break;
-      case JFileChooser.SAVE_DIALOG:
-	ret = saveButtonText;
-	break;
-      default:
-	ret = fc.getApproveButtonText();
-	break;
-      }
-    if (ret == null)
-      ret = openButtonText;
-    return ret;
+    String result = fc.getDialogTitle();
+    if (result == null)
+      result = getApproveButtonText(fc);
+    return result;
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns the approve button mnemonic.
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser (<code>null</code> not permitted).
    *
-   * @return DOCUMENT ME!
+   * @return The approve button mnemonic.
+   * 
+   * @see JFileChooser#getApproveButtonMnemonic()
    */
   public int getApproveButtonMnemonic(JFileChooser fc)
   {
@@ -1845,79 +1303,98 @@ public class BasicFileChooserUI extends FileChooserUI
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns the approve button text.
    *
-   * @param fc DOCUMENT ME!
+   * @param fc  the file chooser (<code>null</code> not permitted).
    *
-   * @return DOCUMENT ME!
+   * @return The approve button text.
+   * 
+   * @see JFileChooser#getApproveButtonText()
    */
   public String getApproveButtonText(JFileChooser fc)
   {
-    if (fc.getApproveButtonText() != null)
-      return fc.getApproveButtonText();
-    else if (fc.getDialogType() == JFileChooser.SAVE_DIALOG)
-      return saveButtonText;
-    else
-      return openButtonText;
+    String result = fc.getApproveButtonText();
+    if (result == null)
+      {
+        if (fc.getDialogType() == JFileChooser.SAVE_DIALOG)
+          result = saveButtonText;
+        else
+          result = openButtonText;
+      }
+    return result;
   }
 
   /**
-   * DOCUMENT ME!
+   * Creates and returns a new action that will be used with the "new folder" 
+   * button.
    *
-   * @return DOCUMENT ME!
+   * @return A new instance of {@link NewFolderAction}.
    */
   public Action getNewFolderAction()
   {
-    return new NewFolderAction();
+    if (newFolderAction == null)
+      newFolderAction = new NewFolderAction();
+    return newFolderAction;
   }
 
   /**
-   * DOCUMENT ME!
+   * Creates and returns a new action that will be used with the "home folder" 
+   * button.
    *
-   * @return DOCUMENT ME!
+   * @return A new instance of {@link GoHomeAction}.
    */
   public Action getGoHomeAction()
   {
-    return new GoHomeAction();
+    if (goHomeAction == null)
+      goHomeAction = new GoHomeAction();
+    return goHomeAction;
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns the action that handles events for the "up folder" control button.
    *
-   * @return DOCUMENT ME!
+   * @return An instance of {@link ChangeToParentDirectoryAction}.
    */
   public Action getChangeToParentDirectoryAction()
   {
-    return new ChangeToParentDirectoryAction();
+    if (changeToParentDirectoryAction == null)
+      changeToParentDirectoryAction = new ChangeToParentDirectoryAction();
+    return changeToParentDirectoryAction;
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns the action that handles events for the "approve" button.
    *
-   * @return DOCUMENT ME!
+   * @return An instance of {@link ApproveSelectionAction}.
    */
   public Action getApproveSelectionAction()
   {
-    return new ApproveSelectionAction();
+    if (approveSelectionAction == null)
+      approveSelectionAction = new ApproveSelectionAction();
+    return approveSelectionAction;
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns the action that handles events for the "cancel" button.
    *
-   * @return DOCUMENT ME!
+   * @return An instance of {@link CancelSelectionAction}.
    */
   public Action getCancelSelectionAction()
   {
-    return new CancelSelectionAction();
+    if (cancelSelectionAction == null)
+      cancelSelectionAction = new CancelSelectionAction();
+    return cancelSelectionAction;
   }
 
   /**
-   * DOCUMENT ME!
+   * Returns the update action (an instance of {@link UpdateAction}).
    *
-   * @return DOCUMENT ME!
+   * @return An action. 
    */
   public Action getUpdateAction()
   {
-    return new UpdateAction();
+    if (updateAction == null)
+      updateAction = new UpdateAction();
+    return updateAction;
   }
 }
